# deployment-controllers

./: .gitignore
.github/workflows/: build-docker-image.yaml
4g-core-deployment-controller/: .dockerignore  Dockerfile  pyproject.toml
4g-core-deployment-controller/data/: .env  compose.controller.yaml  compose.yaml
4g-core-deployment-controller/scripts/: core-endpoints.md  execute.sh  open5gs-dbctl.bash  subscriber-endpoint.md  test_subscribers.py
4g-core-deployment-controller/src/4g_core_deployment_controller/: main.py
4g-core-deployment-controller/src/4g_core_deployment_controller/models/: __init__.py  apn.py
4g-core-deployment-controller/src/4g_core_deployment_controller/routers/core/: __init__.py  proxy.py  root.py  subscribers.py
4g-core-deployment-controller/src/4g_core_deployment_controller/services/: __init__.py  core_info_stream.py
5g-core-deployment-controller/: Dockerfile  README.md  pyproject.toml
5g-core-deployment-controller/data/: .env  compose.controller.yaml  compose.yaml
5g-core-deployment-controller/src/5g_core_deployment_controller/: main.py
5g-core-deployment-controller/src/5g_core_deployment_controller/models/: __init__.py  subscriber.py
5g-core-deployment-controller/src/5g_core_deployment_controller/services/: __init__.py  apn.py  core_info_stream.py  mongodb.py
enb-virtual-deployment-controller/: Dockerfile  pyproject.toml
enb-virtual-deployment-controller/data/: .env  compose.controller.dev.yaml  compose.controller.yaml  compose.yaml
enb-virtual-deployment-controller/src/enb_virtual_deployment_controller/: main.py
(+4 files in other folders)
