[project]
name = "enb-virtual-deployment-controller"
version = "0.1.0"
description = "Virtual eNB deployment controller service"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tknika" }]
dependencies = [
  "base-deployment-controller>=0.4.1",
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.27",
  "ruff>=0.1",
  "requests>=2.31",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
